Consistently use List#of