@@ -1,6 +1,5 @@
 package tech.bugger.control.backing;
 
-import java.util.Locale;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,14 +22,12 @@ import javax.faces.context.ExternalContext;
 import javax.faces.context.FacesContext;
 import javax.servlet.http.Part;
 import java.time.ZonedDateTime;
-import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
@@ -82,7 +79,7 @@ public class PostEditBackerTest {
     public void setUp() throws Exception {
         postEditBacker = new PostEditBacker(applicationSettings, reportService, postService, session, fctx);
 
-        List<Attachment> attachments = Arrays.asList(new Attachment(), new Attachment(), new Attachment());
+        List<Attachment> attachments = List.of(new Attachment(), new Attachment(), new Attachment());
         report = new Report(1234, "Some title", Report.Type.BUG, Report.Severity.RELEVANT, "",
                 new Authorship(null, null, null, null), mock(ZonedDateTime.class),
                 null, null, false, 1);
@@ -258,7 +255,7 @@ public class PostEditBackerTest {
 
     @Test
     public void testDeleteAllAttachments() {
-        postEditBacker.setAttachments(new LinkedList<>(Arrays.asList(new Attachment(), new Attachment())));
+        postEditBacker.setAttachments(new LinkedList<>(List.of(new Attachment(), new Attachment())));
         postEditBacker.deleteAllAttachments();
         assertEquals(0, postEditBacker.getAttachments().size());
     }
